--- a/src/main/resources/org.example.arzttermin/View/patientDashboard.fxml
+++ b/src/main/resources/org.example.arzttermin/View/patientDashboard.fxml
@@ -10,105 +10,82 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.PatientDashboardController">
+<AnchorPane fx:id="rootPane" prefHeight="1024.0" prefWidth="1920.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.PatientDashboardController">
     <children>
-        <Pane layoutX="6.0" layoutY="45.0" prefHeight="346.0" prefWidth="316.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5px;">
+      <ImageView fitHeight="1024.0" fitWidth="1920.0" pickOnBounds="true">
+         <image>
+            <Image url="@../images/baclgroung.png" />
+         </image>
+      </ImageView>
+        <Pane layoutX="381.0" layoutY="208.0" prefHeight="385.0" prefWidth="375.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5px;">
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="Profil" textFill="#5e9f5a">
+            <Label layoutX="14.0" layoutY="20.0" text="Profil" textFill="#5e9f5a">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-              <Label layoutX="12.0" layoutY="38.0" prefHeight="20.0" prefWidth="70.0" text="Vorname:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="14.0" layoutY="53.0" prefHeight="20.0" prefWidth="70.0" text="Vorname:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="13.0" layoutY="64.0" prefHeight="20.0" prefWidth="62.0" text="Nachname:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="15.0" layoutY="79.0" prefHeight="20.0" prefWidth="70.0" text="Nachname:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="14.0" layoutY="91.0" prefHeight="20.0" prefWidth="62.0" text="Benutzername:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="16.0" layoutY="106.0" prefHeight="20.0" prefWidth="87.0" text="Benutzername:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="15.0" layoutY="119.0" prefHeight="20.0" prefWidth="52.0" text="Geburtsdatum:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="17.0" layoutY="134.0" prefHeight="20.0" prefWidth="98.0" text="Geburtsdatum:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="16.0" layoutY="146.0" prefHeight="20.0" prefWidth="52.0" text="E-Mail:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="18.0" layoutY="161.0" prefHeight="20.0" prefWidth="52.0" text="E-Mail:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="15.0" layoutY="172.0" prefHeight="20.0" prefWidth="52.0" text="Geschlecht:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="17.0" layoutY="187.0" prefHeight="20.0" prefWidth="70.0" text="Geschlecht:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="15.0" layoutY="198.0" prefHeight="20.0" prefWidth="52.0" text="Rolle:" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="17.0" layoutY="213.0" prefHeight="20.0" prefWidth="52.0" text="Rolle:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label fx:id="firstNameLabel1" layoutX="92.0" layoutY="38.0" prefHeight="20.0" prefWidth="98.0" text="Vorname" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Label fx:id="lastNameLabel1" layoutX="92.0" layoutY="64.0" prefHeight="20.0" prefWidth="98.0" text="Nachname" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Label fx:id="usernameLabel1" layoutX="91.0" layoutY="91.0" prefHeight="20.0" prefWidth="98.0" text="Benutzername" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Label fx:id="dobLabel1" layoutX="91.0" layoutY="119.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Label fx:id="genderLabel1" layoutX="91.0" layoutY="172.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Label fx:id="emailLabel1" layoutX="92.0" layoutY="146.0" prefHeight="20.0" prefWidth="98.0" text="E-Mail" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Label fx:id="roleLabel1" layoutX="91.0" layoutY="198.0" prefHeight="20.0" prefWidth="98.0" text="Rolle" textAlignment="CENTER" textFill="WHITE">
-                  <font>
-                      <Font name="System Bold" size="12.0" />
-                  </font>
-              </Label>
-              <Button fx:id="editProfileButton" layoutX="56.0" layoutY="271.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="106.0" style="-fx-background-color: #5e9f5a; -fx-background-radius: 10;" text="Bearbeiten" textFill="WHITE">
+              <Label fx:id="firstNameLabel1" layoutX="124.0" layoutY="54.0" prefHeight="20.0" prefWidth="98.0" text="Vorname" textAlignment="CENTER" textFill="WHITE" />
+              <Label fx:id="lastNameLabel1" layoutX="124.0" layoutY="80.0" prefHeight="20.0" prefWidth="98.0" text="Nachname" textAlignment="CENTER" textFill="WHITE" />
+              <Label fx:id="usernameLabel1" layoutX="123.0" layoutY="107.0" prefHeight="20.0" prefWidth="98.0" text="Benutzername" textAlignment="CENTER" textFill="WHITE" />
+              <Label fx:id="dobLabel1" layoutX="123.0" layoutY="135.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textAlignment="CENTER" textFill="WHITE" />
+              <Label fx:id="genderLabel1" layoutX="123.0" layoutY="188.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textAlignment="CENTER" textFill="WHITE" />
+              <Label fx:id="emailLabel1" layoutX="124.0" layoutY="162.0" prefHeight="20.0" prefWidth="98.0" text="E-Mail" textAlignment="CENTER" textFill="WHITE" />
+              <Label fx:id="roleLabel1" layoutX="123.0" layoutY="214.0" prefHeight="20.0" prefWidth="98.0" text="Rolle" textAlignment="CENTER" textFill="WHITE" />
+              <Button fx:id="editProfileButton" layoutX="137.0" layoutY="295.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="106.0" style="-fx-background-color: #5e9f5a; -fx-background-radius: 10;" text="Bearbeiten" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </Button>
          </children>
         </Pane>
-        <ImageView fitHeight="35.0" fitWidth="44.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="94.0" fitWidth="87.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/logo.png" />
             </image>
         </ImageView>
-          <Label layoutX="46.0" layoutY="9.0" text="Patient Dashboard" textFill="#5e9f5a">
+          <Label layoutX="92.0" layoutY="36.0" text="Patient Dashboard" textFill="#5e9f5a">
               <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="24.0" />
               </font>
           </Label>
-          <Button layoutX="855.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleLogoutClicked" prefHeight="8.0" prefWidth="95.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10px;" text="Abmelden" textFill="#5e9f5a">
+          <Button layoutX="1334.0" layoutY="165.0" mnemonicParsing="false" onMouseClicked="#handleLogoutClicked" prefHeight="37.0" prefWidth="155.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10px;" text="Abmelden" textFill="#5e9f5a">
               <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="14.0" />
               </font>
           </Button>
 
@@ -116,99 +93,99 @@
             
             
             
-                    <Pane layoutX="524.0" layoutY="401.0" prefHeight="190.0" prefWidth="468.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
+                    <Pane layoutX="974.0" layoutY="602.0" prefHeight="268.0" prefWidth="547.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
             <children>
                 <Label layoutX="10.0" layoutY="10.0" text="Meine Ärzte" textFill="#5e9f5a">
                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font name="System Bold" size="18.0" />
                     </font>
                 </Label>
-                <ScrollPane fx:id="doctorsScrollPane" hbarPolicy="NEVER" layoutX="8.0" layoutY="30.0" prefHeight="150.0" prefWidth="453.0" style="-fx-background-color: transparent; -fx-border-color: transparent;">
+                <ScrollPane fx:id="doctorsScrollPane" hbarPolicy="NEVER" layoutX="14.0" layoutY="48.0" prefHeight="199.0" prefWidth="529.0" style="-fx-background-color: transparent; -fx-border-color: transparent;">
                    <content>
-                      <AnchorPane fx:id="doctorsPane" prefHeight="150.0" prefWidth="449.0" style="-fx-background-color: #1A1D22;" />
+                      <AnchorPane fx:id="doctorsPane" prefHeight="206.0" prefWidth="514.0" style="-fx-background-color: #1A1D22;" />
                    </content>
                 </ScrollPane>
             </children>
         </Pane>
-      <Pane layoutX="5.0" layoutY="401.0" prefHeight="190.0" prefWidth="510.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
+      <Pane layoutX="381.0" layoutY="602.0" prefHeight="268.0" prefWidth="591.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Meine Termine" textFill="#5e9f5a">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <ScrollPane fx:id="appointmentsScrollPane" hbarPolicy="NEVER" layoutX="8.0" layoutY="30.0" prefHeight="150.0" prefWidth="494.0" style="-fx-background-color: transparent; -fx-border-color: transparent;">
+            <ScrollPane fx:id="appointmentsScrollPane" hbarPolicy="NEVER" layoutX="8.0" layoutY="45.0" prefHeight="211.0" prefWidth="575.0" style="-fx-background-color: transparent; -fx-border-color: transparent;">
                <content>
-                  <AnchorPane fx:id="appointmentsPane" prefHeight="150.0" prefWidth="482.0" style="-fx-background-color: #1A1D22;" />
+                  <AnchorPane fx:id="appointmentsPane" prefHeight="210.0" prefWidth="571.0" style="-fx-background-color: #1A1D22;" />
                </content>
             </ScrollPane>
          </children>
       </Pane>
-      <Pane layoutX="676.0" layoutY="45.0" prefHeight="346.0" prefWidth="316.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 5px; -fx-border-radius: 5px; -fx-background-radius: 10px;">
+      <Pane layoutX="1146.0" layoutY="208.0" prefHeight="385.0" prefWidth="375.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 5px; -fx-border-radius: 5px; -fx-background-radius: 10px;">
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="Termin buchen" textFill="#5e9f5a">
+            <Label layoutX="14.0" layoutY="14.0" text="Termin buchen" textFill="#5e9f5a">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+
+                                                                                    <!-- Patient Name -->
+            <Label layoutX="16.0" layoutY="55.0" text="Patient:" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="patientNameLabel" layoutX="71.0" layoutY="55.0" text="Patient Name" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
 
-                                                                                    <!-- Patient Name -->
-            <Label layoutX="15.0" layoutY="40.0" text="Patient:" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="11.0" />
-               </font>
-            </Label>
-            <Label fx:id="patientNameLabel" layoutX="70.0" layoutY="40.0" text="Patient Name" textFill="WHITE">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
-
                                                                                       <!-- Specialization Selection -->
-              <Label layoutX="16.0" layoutY="74.0" text="Fachrichtung:" textFill="WHITE">
+              <Label layoutX="18.0" layoutY="102.0" text="Fachrichtung:" textFill="WHITE">
                  <font>
                     <Font name="System Bold" size="11.0" />
                  </font>
               </Label>
-              <ComboBox fx:id="specializationComboBox" layoutX="97.0" layoutY="69.0" prefHeight="25.0" prefWidth="173.0" />
+              <ComboBox fx:id="specializationComboBox" layoutX="111.0" layoutY="98.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Doctor Selection -->
-            <Label layoutX="15.0" layoutY="115.0" text="Ärzte:" textFill="WHITE">
+            <Label layoutX="17.0" layoutY="143.0" text="Ärzte:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </Label>
-            <ComboBox fx:id="doctorComboBox" layoutX="97.0" layoutY="111.0" prefHeight="25.0" prefWidth="173.0" />
+            <ComboBox fx:id="doctorComboBox" layoutX="111.0" layoutY="139.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Date Selection -->
-            <Label layoutX="13.0" layoutY="158.0" text="Datum:" textFill="WHITE">
+            <Label layoutX="15.0" layoutY="186.0" text="Datum:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </Label>
-            <ComboBox fx:id="dateComboBox" layoutX="97.0" layoutY="154.0" prefHeight="25.0" prefWidth="173.0" />
+            <ComboBox fx:id="dateComboBox" layoutX="111.0" layoutY="182.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Time Selection -->
-            <Label layoutX="12.0" layoutY="201.0" text="Uhrzeit:" textFill="WHITE">
+            <Label layoutX="14.0" layoutY="229.0" text="Uhrzeit:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </Label>
-            <ComboBox fx:id="timeComboBox" layoutX="97.0" layoutY="197.0" prefHeight="25.0" prefWidth="173.0" />
+            <ComboBox fx:id="timeComboBox" layoutX="112.0" layoutY="225.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Book Button -->
-            <Button fx:id="bookAppointmentBtn" layoutX="58.0" layoutY="279.0" mnemonicParsing="false" onAction="#bookAppointmentFromDashboard" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10;" text="Termin buchen" textFill="WHITE">
+            <Button fx:id="bookAppointmentBtn" layoutX="98.0" layoutY="302.0" mnemonicParsing="false" onAction="#bookAppointmentFromDashboard" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10;" text="Termin buchen" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
          </children>
       </Pane>
-      <Pane layoutX="328.0" layoutY="45.0" prefHeight="346.0" prefWidth="342.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
+      <Pane layoutX="763.0" layoutY="208.0" prefHeight="385.0" prefWidth="375.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
          <children>
       
                                                 <!-- Doctor Profile Content -->
-            <AnchorPane fx:id="doctorProfilePane" layoutX="10.0" layoutY="11.0" prefHeight="322.0" prefWidth="327.0" />
+            <AnchorPane fx:id="doctorProfilePane" layoutX="10.0" layoutY="11.0" prefHeight="365.0" prefWidth="358.0" />
          </children>
       </Pane>
 
